auth screen setup

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -36,7 +36,8 @@
     "filenames/no-index": 1,
     "indent": [
       "error",
-      2
+      2,
+      {"SwitchCase": 1}
     ],
     "quotes": [
       "error",
