--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "prop-types": "^15.6.0",
     "react": "16.0.0-beta.5",
     "react-native": "0.49.3",
+    "react-native-communications": "^2.2.1",
     "react-native-router-flux": "^4.0.0-beta.21",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
